src/tests/invalid_characters/snapshots/monkey_interpreter__tests__invalid_characters__test_invalid_characters_case_1_lexical_analysis.snap
---
source: src/tests/invalid_characters/mod.rs
expression: error
---
Err(
    IllegalCharacter(
        '`',
    ),
)
